Bug 463882 - nsDownloadManager::Init is not safe for multiple calls; r=sdwilsh a191=beltzner